--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^2.2.0",
     "react-headroom": "^3.1.1",
     "react-i18next": "^11.11.1",
     "react-redux": "^7.2.1",
