--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "framer-motion": "^3.10.3",
     "heroicons-react": "^1.4.1",
     "i18next": "^20.3.2",
-    "node-sass": "^4.14.1",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^2.2.0",
     "react-headroom": "^3.1.1",
     "react-i18next": "^11.11.1",
+    "react-messenger-customer-chat": "^0.8.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -36,6 +37,7 @@
     "styled-components": "^5.3.0",
     "three": "^0.130.1",
     "typescript": "^4.3.5",
+    "typescript-react-facebook-messenger": "0.0.4",
     "valtio": "^1.2.1",
     "web-vitals": "^1.1.2"
   },
