--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-spring/three": "^9.3.1",
+    "@react-three/drei": "^7.22.6",
+    "@react-three/fiber": "^7.0.19",
     "framer-motion": "^3.10.3",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -15,7 +18,9 @@
     "react-headroom": "^3.2.0",
     "react-icons": "^4.3.1",
     "react-simple-chatbot": "^0.6.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "three": "^0.134.0",
+    "valtio": "^1.2.6"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
