--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "test": "jest",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@react-spring/three": "^9.3.1",
@@ -24,24 +25,18 @@
     "valtio": "^1.2.6"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-typescript": "^7.16.7",
-    "@testing-library/dom": "^7.30.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.24",
     "autoprefixer": "^10.4.2",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "27.4.5",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "jest-cli": "^26.6.3",
-    "jest-dom": "^4.0.0",
+    "jest": "^27.5.1",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18",
-    "ts-node": "^9.1.1",
     "typescript": "4.5.5"
   }
 }
